# Wallwize

./: .gitattributes  .gitignore  LICENSE  README.md  design-qa.md  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
UI/: index.html  package-lock.json  package.json  vite.config.ts
UI/app/: App.tsx  main.tsx  startup-error.ts  types.ts
UI/app/components/: AIAnalysisView.tsx  CategoriesView.tsx  DetailsPanel.tsx  DuplicatesView.tsx  LibraryView.tsx  ReviewQueueView.tsx  SettingsView.tsx  Sidebar.tsx  TaskStatus.tsx  TitleBar.tsx  WallpaperThumbnail.tsx
UI/app/demo/: createDemoApi.ts  demoState.ts
UI/app/material/: components.tsx  expressive.tsx  motion.ts
UI/electron/: main.cjs  preload.cjs  set-wallpaper.applescript
UI/styles/: fonts.css  globals.css  index.css  theme.css  views.css
assets/: README.md
packaging/: wallwize-backend.spec  wallwize-installer.nsh
scripts/: backend_entry.py  build-release.ps1
src/wallwize/: __init__.py  sample.py
src/wallwize/analysis/: __init__.py  colors.py  hashing.py  image_analyzer.py
src/wallwize/classification/: __init__.py  discovery.py  router.py
src/wallwize/classification/vision/: __init__.py  base.py  factory.py  labels.py  (+4 more)
src/wallwize/cli/: __init__.py  app.py
src/wallwize/domain/: __init__.py  models.py  policies.py  taxonomy.py
src/wallwize/planning/: __init__.py  applier.py  duplicates.py  paths.py  plan_builder.py  summary.py
src/wallwize/services/: scanner.py
src/wallwize/storage/: json_store.py
tests/: test_wallwize.py
